--- a/scss/sequence-theme.two-up.scss
+++ b/scss/sequence-theme.two-up.scss
@@ -316,28 +316,28 @@ body {
     @include prefixed(transition-timing-function, "ease-in-out");
   }
 
-  .seq-content > div.flame1 {
+  .seq-content > div.frame1 {
     padding: 0 0 120px 85px;
 
     /* Reset the white-space so content wraps as expected */
     white-space: normal;
   }
 
-  .seq-content > div.flame2 {
+  .seq-content > div.frame2 {
     padding: 0 0 0 125px;
 
     /* Reset the white-space so content wraps as expected */
     white-space: normal;
   }
 
-  .seq-content > div.flame3 {
+  .seq-content > div.frame3 {
     padding: 0 0 0 125px;
 
     /* Reset the white-space so content wraps as expected */
     white-space: normal;
   }
 
-  .seq-content > div.flame4 {
+  .seq-content > div.frame4 {
     padding: 0 0 0 80px;
 
     /* Reset the white-space so content wraps as expected */
