--- a/scss/sequence-theme.two-up.scss
+++ b/scss/sequence-theme.two-up.scss
@@ -155,7 +155,7 @@ body {
     @include prefixed(user-select, "none");
   }
 
-  .seq-pagination,
+  .pagination,
   .seq-swipe {
     display: inline-block;
     vertical-align: top;
@@ -170,7 +170,7 @@ body {
     }
   }
 
-  .seq-pagination {
+  .pagination-nav {
     margin: 0;
     padding: 0;
 
@@ -318,6 +318,9 @@ body {
 
   .seq-content > div.frame1 {
     padding: 0 0 120px 85px;
+    @media (max-width: 360px) {
+      padding: 15px;
+    }
 
     /* Reset the white-space so content wraps as expected */
     white-space: normal;
@@ -431,6 +434,12 @@ body {
   }
 }
 
+.btn-next{
+  border: 0;
+  background-color: transparent;
+  display: block;
+}
+
 @media only screen and (min-width: 769px) {
   html,
   body {
@@ -530,7 +539,7 @@ body {
       @include prefixed(transform, "translateY(-50%) translateZ(100px)");
     }
 
-    .seq-pagination {
+    .pagination-nav {
       li {
         display: block;
         margin: 0 0 1em;
