--- a/scss/sequence-theme.two-up.scss
+++ b/scss/sequence-theme.two-up.scss
@@ -36,9 +36,9 @@ body {
 .seq {
 
   /* Dimensions */
-  width: 100%;
+  width: 100vw;
   max-width: $sequenceWidth;
-  height: 100%;
+  height: 100vh;
 
   /* Hide anything that goes beyond the boundaries of the Sequence container */
   overflow: hidden;
@@ -58,6 +58,10 @@ body {
     margin: 0;
     padding: 0;
     list-style: none;
+    display: block;
+    @media (max-width: 768px) {
+      display: none;
+    }
   }
 
   .seq-canvas {
@@ -113,6 +117,9 @@ body {
     /* When JS is enabled */
     .seq-nav {
       display: block;
+      @media (max-width: 768px) {
+        display: none;
+      }
     }
 
     .seq-in {
@@ -346,7 +353,7 @@ body {
   .seq-feature > div {
     width: 100%;
     height: 100%;
-    background-repeat: none;
+    background-repeat: no-repeat;
     background-position: 50% 50%;
     background-size: cover;
 
